[gd_scene load_steps=4 format=3 uid="uid://bhqw5lfvaq0bg"]

[ext_resource type="Script" uid="uid://6q5m84onxilu" path="res://ui/screens/credit-screen/credit_element.gd" id="1_ukcj5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2mwwd"]

[sub_resource type="LabelSettings" id="LabelSettings_p0wxk"]
font_size = 12

[node name="Credit" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1
script = ExtResource("1_ukcj5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CreditButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_2mwwd")
flat = true

[node name="LicenseButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "License"

[node name="DescribtorLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.670588)
layout_mode = 2
label_settings = SubResource("LabelSettings_p0wxk")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="HBoxContainer/LicenseButton" to="." method="_on_license_button_pressed"]
